<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".controllers.Ingresar">

    <ImageView
        android:layout_width="73dp"
        android:layout_height="85dp"
        android:background="@drawable/logoplay"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="320dp"
        android:layout_height="400dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="60dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenida"
                    android:fontFamily="@font/gothic"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/negro"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:gravity="center">

                <Button
                    android:id="@+id/btnIngresarLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/boton"
                    android:fontFamily="@font/gothicb"
                    android:text="@string/ingresar"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center">

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/boton"
                    android:fontFamily="@font/gothicb"
                    android:text="@string/regristro"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco" />

            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/relative6"
                android:layout_weight="5"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/txtRestablecer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:fontFamily="@font/gothic"
                    android:text="@string/copy"
                    android:textColor="@color/negro" />


            </RelativeLayout>


        </LinearLayout>




    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>