<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo2"
    android:layout_height="match_parent"
    tools:context=".controllers.Login">


    <ImageView
        android:layout_width="81dp"
        android:layout_height="94dp"
        android:background="@drawable/logoplay"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="320dp"
        android:layout_height="400dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="60dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inicioSesion"
                    android:fontFamily="@font/gothicb"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/negro"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative2"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="50dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/campos"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:textSize="15sp"
                        android:hint="@string/usuario"
                        android:textColor="@color/negro">


                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative3"
                android:layout_weight="3"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/campos"
                        android:fontFamily="@font/gothic"
                        android:paddingStart="10dp"
                        android:inputType="textPassword"
                        android:paddingEnd="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/negro"
                        android:hint="@string/contrasena">


                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center">

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:background="@drawable/boton"
                    android:fontFamily="@font/gothicb"
                    android:text="@string/ingresar"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="4"
                android:gravity="center">

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:background="@drawable/boton"
                    android:fontFamily="@font/gothicb"
                    android:text="Registar"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative5"
                android:layout_weight="5"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/txtRestablecer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:gravity="center"
                    android:fontFamily="@font/gothicb"
                    android:text="@string/restablecer"
                    android:textColor="@color/negro" />


            </RelativeLayout>


        </LinearLayout>




    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>